standardized all README files, added week 6 folder and files

--- a/SWM/index.html
+++ b/SWM/index.html
@@ -46,6 +46,7 @@
 	section {
 		width: 25%;
 		float: left;
+		min-height: 20vh;
 	}
 </style>
 </head>
@@ -57,14 +58,14 @@
     <section>
         <h2> Week 2 </h2>
             <ul>
-                <a href="week_02/README.md"><li>READ ME</li></a>
+                <a href="week_02/README.txt"><li>READ ME</li></a>
                 <a href="week_02/cheatsheet.html"><li>Cheat Sheet</li></a>
             </ul>
     </section>
     <section>
         <h2> Week 3 </h2>
             <ul>
-                <a href="week_03/README.md"><li>READ ME</li></a>
+                <a href="week_03/README.txt"><li>READ ME</li></a>
                 <a href="week_03/nesteddivs.html"><li>Nested Divs</li></a>
                 <a href="week_03/reformat.html"><li>Refactoring</li></a>
             </ul>
@@ -72,7 +73,7 @@
     <section>
         <h2> Week 4 </h2>
             <ul>
-                <a href="week_04/README.md"><li>READ ME</li></a>
+                <a href="week_04/README.txt"><li>READ ME</li></a>
                 <a href="week_04/sadness.html"><li>Bad Site</li></a>
                 <a href="week_04/lumbertime.html"><li>Rad Site</li></a>
             </ul>
@@ -80,7 +81,14 @@
     <section>
         <h2> Week 5 </h2>
             <ul>
-                <a href="week_05/README.md"><li>READ ME</li></a>
+                <a href="week_05/README.txt"><li>READ ME</li></a>
+            </ul>
+    </section>
+    <section>
+        <h2> Week 6 </h2>
+            <ul>
+                <a href="week_06/README.txt"><li>READ ME</li></a>
+                <a href="https://www.khanacademy.org/profile/kaid_1167145387805241587509965/"><li>Khan Academy Profile</li> </a>
             </ul>
     </section>
 </div>
