--- a/SWM/index.html
+++ b/SWM/index.html
@@ -89,6 +89,15 @@
             <ul>
                 <a href="week_06/README.txt"><li>READ ME</li></a>
                 <a href="https://www.khanacademy.org/profile/kaid_1167145387805241587509965/"><li>Khan Academy Profile</li> </a>
+                <a href="week_06/piglatin.html"><li>Practicing JS: Piglatin Generator</li> </a>
+            </ul>
+    </section>
+    <section>
+        <h2> Week 7 </h2>
+            <ul>
+                <a href="week_07/README.txt"><li>READ ME</li></a>
+                <a href="https://www.khanacademy.org/profile/kaid_1167145387805241587509965/"><li>Khan Academy Profile</li> </a>
+                <a href="week_07/gradingself.txt"><li>Self-Evalutation</li> </a>
             </ul>
     </section>
 </div>
